# agent-with-RL

./: .env.example  .gitattributes  .gitignore  README.md  environment-rag.yml  environment.yml  pyproject.toml  requirements-runtime.txt
docs/: agent-rl-system-guide.md
docs/design-architecture/agent-rl-ooad/: AGENT_RL_OOAD_DESIGN_2026-05-20.md
docs/design-architecture/core-package-layering/: AGENT_RL_CORE_LAYERING_DESIGN_2026-05-20.md
docs/design-architecture/local-asr-service/: SHANDIANSHUO_SENSEVOICE_GPU_ANALYSIS_2026-05-22.md
docs/design-architecture/narrative-agent-system/: NARRATIVE_AGENT_DOMAIN_MODEL_2026-05-20.md  NARRATIVE_AUTHOR_INTERACTION_REACT_SYSTEM_2026-05-22.md  NARRATIVE_CODEX_LIKE_LONG_RUNNING_AGENT_PLAN_2026-05-22.md  NARRATIVE_DEEP_ANALYSIS_PERSISTENCE_2026-05-21.md  NARRATIVE_ENGINE_ABSORPTION_PLAN_2026-05-20.md  NARRATIVE_INTERACTIVE_WORKBENCH_GUIDE_2026-05-22.md  NARRATIVE_LONGFORM_STATE_MEMORY_DESIGN_2026-05-22.md  NARRATIVE_LONG_RUNNING_AGENT_IMPLEMENTATION_STATUS_2026-05-22.md  NARRATIVE_LONG_RUNNING_AGENT_PHASE5_6_STATUS_2026-05-22.md  NARRATIVE_OPENCODE_MUTATION_PLAN_2026-05-22.md  (+1 more)
scripts/: test_qwen3_embedding.py
src/agent_rl/: __init__.py  architectures.py  concepts.py  config.py  integrations.py  memory.py  policies.py  runtime.py
tests/: test_architectures.py  test_config.py  test_gridworld.py  test_narrative.py  test_narrative_agent.py  test_narrative_analysis.py  test_narrative_context.py  test_narrative_deep_analysis.py  test_narrative_factory.py  test_narrative_ingestion.py  test_narrative_jobs.py  test_narrative_llm.py  test_narrative_llm_clients.py  test_narrative_longform_state.py  test_narrative_memory_repository.py  test_narrative_prompting.py  test_narrative_react.py  test_narrative_retrieval.py  test_narrative_workbench.py  test_rag_service.py
(+81 files in other folders)
