[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-with-rl"
version = "0.1.0"
description = "OOAD learning skeleton for LLM agents and reinforcement-learning concepts."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8"]
rl = [
    "gymnasium",
    "pettingzoo",
    "stable-baselines3",
    "ray[rllib]",
]
agents = [
    "openai-agents",
    "langgraph",
    "langchain",
    "autogen-agentchat",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
